[project]
name = "lekiwi"
version = "0.1.0"
description = "Lekiwi robot software stack."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
]

[tool.uv.workspace]
members = [
  "packages/*",
]

[tool.pyright]
exclude = ["crates*", "target*", "packages*"]
include = [
  "packages/lekiwi_lerobot",
  "packages/lekiwi_sim",
  "packages/lekiwi_teleoperate",
]

[tool.uv.sources]
lekiwi_lerobot = { path = "packages/lekiwi_lerobot" }
lekiwi_sim = { path = "packages/lekiwi_sim" }
lekiwi_teleoperate = { path = "packages/lekiwi_teleoperate" }
