[project]
name = "lekiwi"
version = "0.1.0"
description = "Lekiwi robot software stack."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "dora_lekiwi_action_publisher",
  "dora_lekiwi_client",
  "dora_run_policy",
  "lekiwi_lerobot",
  "lekiwi_sim",
  "lekiwi_teleoperate",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This project is a meta-package for the workspace, it contains no code itself.
packages = []

[tool.uv.workspace]
members = [
  "dora/node_hub/dora_lekiwi_action_publisher",
  "dora/node_hub/dora_lekiwi_client",
  "dora/node_hub/dora_run_policy",
  "packages/*"
]

[tool.pyright]
include = [
  "dora/node_hub/dora_lekiwi_action_publisher",
  "dora/node_hub/dora_lekiwi_client",
  "dora/node_hub/dora_run_policy",
  "packages/*",
]

[tool.uv.sources]
dora_lekiwi_action_publisher = { workspace = true }
dora_lekiwi_client = { workspace = true }
dora_run_policy = { workspace = true }
lekiwi_lerobot = { workspace = true }
lekiwi_sim = { workspace = true }
lekiwi_teleoperate = { workspace = true }
