[project]
name = "dora_lekiwi_client"
version = "0.1.0"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Franco Cipollone", email = "franco.c@ekumenlabs.com" }]
description = "dora_lekiwi_client"
readme = "README.md"
requires-python = ">=3.10"

dependencies = ["dora-rs >= 0.3.13"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest >=8.1.1", "ruff >=0.9.1"]

[project.scripts]
dora_lekiwi_client = "dora_lekiwi_client.main:main"

[tool.ruff.lint]
extend-select = [
  "D",   # pydocstyle
  "UP"
]
